# ai-agent

./: README.md
airflow/: pyproject.toml
airflow/dags/modules/: legal_case_processing.py
backend/: README.md  main.py  pyproject.toml  report_agent.py  strategy_agent.py  summary_agent.py
frontend/: pyproject.toml  streamlit_app.py
frontend/.streamlit/: config.toml
frontend/pages/: report_app.py  strategy_app.py  summary_app.py
