[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["shraddhabhandarkar3 <bhandarkar.s@northeastern.edu>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "3.10.15"
streamlit = "^1.26.0"
requests = "^2.31.0"
streamlit-chat = "^0.1.1"
fpdf = "^1.7.2"
python-docx = "^1.1.2"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
